--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "an api for scraping apartments from craigslist",
   "main": "index.js",
   "dependencies": {
-    "underscore": "1.3.3"
+    "underscore": "1.3.3",
+    "jsdom": "0.2.15"
   },
   "repository": {
     "type": "git",
